# edge-vision-node

./: .gitignore  CMakeLists.txt  DEMO_SCRIPT.md  LICENSE  README.md  partitions.csv  sdkconfig.defaults
.github/workflows/: ci.yml
docs/: ARCHITECTURE.md  CHEATSHEET.md  interview_notes.md
main/: CMakeLists.txt  camera_pins.h  idf_component.yml  inference.cpp  inference.h  main.c  secrets.h.template
